--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -3,6 +3,14 @@ body{
 }
 
 img{
-  width: 100%;
+  max-width: 100%;
   height: auto
+}
+
+*{
+  box-sizing: border-box;
+}
+
+a{
+  color: $mainOrange;
 }
