--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -8,29 +8,47 @@
     left: 0;
     width: 100%;
     text-align: center
+    
   }
 
   &__title{
     font-weight: 300;
     color: $mainBlue;
-    font-size: 4.8rem;
+    font-size: 2rem;
     margin: 0;
+
+    @mixin atSmall{
+      font-size: 4.8rem;
+    }
   }
 
   &__subtitle{
     font-weight: 300;
     color: $mainBlue;
-    font-size: 2.9rem;
+    font-size: 1.1rem;
     margin: 0;
+
+    @mixin atSmall{
+      font-size: 2.9rem;
+    }
   }
 
   &__description{
     font-weight: 100;
     color: white;
-    font-size: 1.875rem;
+    font-size: 1.45rem;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, .1);
     max-width: 30rem;
     margin-left: auto;
     margin-right: auto;
+
+    @mixin atSmall{
+      font-size: 1.875rem;
+    }
+  }
+
+  &__image{
+    display: block;
+    border-bottom: 10px solid $mainBlue;
   }
 }
